--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,35 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Node.js dependencies
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
-
-# production
+# Build output
 /build
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Operating system files
+.DS_Store
+Thumbs.db
+
+# Environment files (if any)
+.env
+
+# Coverage directory (if using a code coverage tool)
+/coverage
+
+# IDE/editor folders
+.vscode/
+.idea/
+
+# Dependency directories for Yarn or npm
+.pnp/
+.pnp.js
+
+# Ignore package-lock.json or yarn.lock if you don't want to track them (though it's recommended to track them for consistency)
+# package-lock.json
+# yarn.lock
+
+# Miscellaneous
+*.log
